syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.requests.profile";
option java_multiple_files = true;

package requests;

message CheckPasswordRequest {
  string password = 1;
}
