syntax = "proto3";

option java_package = "org.hse.moodactivities.common.proto.responses.profile";
option java_multiple_files = true;

package responses;

message GetInfoResponse {
  string name = 1;
  string dateOfBirth = 2;
  string login = 3;
  string email = 4;
  bool googleEnabled = 5;
}
